--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "next start",
     "lint": "next lint",
     "prisma:seed": "npx prisma db seed",
-    "prismix": "npx prismix && prisma format"
+    "prisma:mix": "prisma-import --force",
+    "prisma:generate": "yarn prisma:mix && prisma format && prisma generate",
+    "prisma:migrate": "npx prisma migrate dev -n",
+    "prisma:fresh": "npx prisma migrate reset"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
@@ -17,9 +20,14 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
     "@prisma/client": "^5.7.1",
+    "@tailwindcss/forms": "^0.5.7",
+    "bwip-js": "^4.1.2",
+    "dayjs": "^1.11.10",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "recoil": "^0.7.7",
+    "styled-components": "^6.1.3",
     "sweetalert2": "^11.10.1"
   },
   "devDependencies": {
@@ -31,11 +39,16 @@
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
     "prisma": "^5.7.1",
+    "prisma-import": "^1.0.4",
     "tailwindcss": "^3.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "prisma": {
+    "import": {
+      "output": "./prisma/schema.prisma",
+      "schemas": "./prisma/schema/*.prisma"
+    },
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
