--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "@prisma/client": "^5.7.1",
     "@tailwindcss/forms": "^0.5.7",
     "bwip-js": "^4.1.2",
+    "canvas": "^2.11.2",
     "dayjs": "^1.11.10",
+    "image-size": "^1.1.0",
+    "multer": "^1.4.5-lts.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
@@ -31,6 +34,9 @@
     "sweetalert2": "^11.10.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/image-size": "^0.8.0",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.10.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
