--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,6 @@ yarn-error.log*
 
 # local env files
 .env*.local
-.env*
 
 # vercel
 .vercel
@@ -38,3 +37,6 @@ next-env.d.ts
 
 # migration files
 /prisma/migrations
+
+.env
+/postgres_data
